apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion compileApi

    defaultConfig {
        targetSdkVersion targetApi
        minSdkVersion project.getProperties().get("SDK_VERSION")
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }

    packaging {
        resources {
            excludes += ['lib/armeabi/libsqlcipher.so', 'lib/mips64/libsqlcipher.so', 'lib/mips/libsqlcipher.so', 'META-INF/versions/9/OSGI-INF/MANIFEST.MF']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    namespace 'com.undatech.remoteClientUi'
}

dependencies {
    implementation project(':pubkeyGenerator')
    implementation project(':remoteClientLib')
    implementation project(':remoteClientLib:jni:libs:deps:FreeRDP:client:Android:Studio:freeRDPCore')
    implementation group: 'org.bouncycastle', name: 'bctls-jdk18on', version: '1.80'
    implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.7.1'
    implementation 'com.google.android.material:material:1.13.0'
    implementation group: 'androidx.legacy', name: 'legacy-support-v4', version: '1.0.0'
    implementation group: 'androidx.vectordrawable', name: 'vectordrawable', version: '1.1.0'
    implementation group: 'androidx.preference', name: 'preference-ktx', version: '1.2.0'
    implementation (name: "android-database-sqlcipher-4.5.4", ext: "aar")
    implementation "androidx.sqlite:sqlite-ktx:2.2.0"
    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.4'
    implementation 'org.apache.httpcomponents:httpcore:4.4.10'
    implementation "com.github.luben:zstd-jni:1.5.7-4@aar"
    implementation "androidx.core:core-ktx:1.7.0"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"

    implementation 'com.google.android.play:review:2.0.1'
    implementation 'com.google.android.play:review-ktx:2.0.1'
    implementation project(path: ':common')
    implementation 'com.google.android.gms:play-services-base:18.0.1'
}
repositories {
    google()
    mavenCentral()
}
